<resources>
    <string name="app_name">Pooly RS</string>

    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Closer Navigation Drawer</string>
    <string name="editprofile">Edit Profile Details</string>
    <string name="txtBook">Book Now !</string>

    <string name="home">Home</string>
    <string name="announcement">Announcement</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="other_actions">Action</string>
    <string name="editann">Edit Announcement</string>
    <string name="logout">Log Out</string>

    <string name="profilepic">profilePic</string>
    <string name="username">Username</string>
    <string name="email">example@gmail.com</string>

    <string name="login">Login</string>
    <string name="txtUsername">Username</string>
    <string name="txtEmail">Email</string>
    <string name="password">Password</string>
    <string name="acc">Don\'t have an account yet?</string>
    <string name="signup">Sign Up!</string>
    <string name="sign_up">Sign Up</string>
    <string name="userid">User ID</string>
    <string name="lName">Full Name</string>
    <string name="birth_date">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="contact">Contact</string>
    <string name="notice">Renovating Party Pool</string>
    <string name="content">Dear customers,\n\n

We are sorry to inform you that the party pool is now renovating. So, the party pool will not available for reservation.\n\n
Centre will close on 27th Nov 2022\n

Pooly swimming club will be close on 27th Nov 2022.\n
Sorry for any incovenience caused. Thank you.</string>

    <color name="blue">#21425A</color>
    <color name="annblue">#075090</color>

</resources>