<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.androidx.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_baseline_speaker_notes_24"
            android:title="@string/announcement" />

        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_baseline_edit_calendar_24"
            android:title="@string/booking" />
    </group>

    <item android:title="@string/other_actions">
        <menu>
            <item
                android:id="@+id/nav_editann"
                android:icon="@drawable/ic_baseline_edit_24"
                android:title="@string/editann" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_subdirectory_arrow_left_24"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>