<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/swimming_back"
        android:backgroundTint="#80FFFFFF"
        android:backgroundTintMode="src_over">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text=" MY PROFILE "
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <LinearLayout
            android:id="@+id/layout_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="#80FFFFFF"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:contentDescription="@string/profilepic"
                android:src="@mipmap/ic_launcher_catswimming_round" />

            <TextView
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/userid"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/lName"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/bi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/birth_date"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/et_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/gender"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/email"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/contact"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/editProfile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="30dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/editprofile"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_edit_24" />

        </LinearLayout>

    </RelativeLayout>


</ScrollView>