<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/swimming_back"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    android:scaleType="centerCrop">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="50dp"
        android:background="#80FFFFFF"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:contentDescription="@string/profilepic"
                android:src="@mipmap/ic_launcher_catswimming_round" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_image"
            app:layout_constraintWidth_percent="0.7">

            <TextView
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/userid"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_username"
            app:layout_constraintWidth_percent="0.7">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/lName"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_birth_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullname"
            app:layout_constraintWidth_percent="0.7">

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/birth_date"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_birth_date"
            app:layout_constraintWidth_percent="0.7">

            <EditText
                android:id="@+id/et_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/gender"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_gender"
            app:layout_constraintWidth_percent="0.7">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/email"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_email"
            app:layout_constraintWidth_percent="0.7">

            <EditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:hint="@string/contact"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#546E7A"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="12dp"
            android:contextClickable="true"
            android:scaleType="fitCenter"
            android:text="Save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>